--- a/src/main/resources/templates/user/resetpwform.html
+++ b/src/main/resources/templates/user/resetpwform.html
@@ -12,11 +12,11 @@
                 <div class="row">
                     <div class="columns large-3">
                         <label for="password">New password</label>
-                        <input type="password" name="password" id="password" required/>
+                        <input type="password" name="password" id="password" autocomplete="off" required/>
                     </div>
                     <div class="columns large-3">
                         <label for="password">Confirm new password</label>
-                        <input type="password" name="cpassword" id="cpassword" required/>
+                        <input type="password" name="cpassword" id="cpassword" autocomplete="off" required/>
                     </div>
                     <input type="hidden" th:value="${rpc}" name="rpc" id="rpc"/>
                 </div>
