Added footer again and changed some messages.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -38,14 +38,14 @@ the other templates.
     <th:block th:replace="${main}"/>
 
     <!-- common footer -->
-    <!--div class="tcbl-footer row">
+    <div class="tcbl-footer row">
         <div class="columns">
             <p>This project has received funding from the European Union's Horizon 2020 Programme for research, technology development, and innovation under grant Agreement n.646133</p>
         </div>
         <div class="columns">
             <img th:src="@{/assets/euh2020.png}">
         </div>
-    </div-->
+    </div>
 </div>
 
 <script th:fragment="validatePassword">
