--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,9 @@
 
 <h1>TCBL User  Manager</h1>
 <div>
-    Welcome to the fantastic TCBL User Management application!
+    <p>Welcome to the TCBL User Management application!</p>
+    <p>If you want to change the information you share with TCBL services, sign in below.</p>
+    <p>This is still work in progress, more to come soon!</p>
 <!--    You are successfully logged in <span style="font-weight:bold" th:text="${userName}"></span>
     via the OAuth 2.0 Client <span style="font-weight:bold" th:text="${clientName}"></span> -->
 </div>
