--- a/src/main/resources/templates/user/resetpw.html
+++ b/src/main/resources/templates/user/resetpw.html
@@ -6,7 +6,7 @@
 <div th:replace="/fragments :: header( ~{::h1}, ~{::main})">
     <h1>Reset Password</h1>
     <main>
-        <p>Forgot your password? No problem.</p>
+        <p>First time on the new website? Welcome in!<br>Forgot your password? No problem.</p>
         <form action="#" th:action="@{/user/resetpw}" method="post" name="resetPwForm">
             <div class="row">
                 <div class="columns large-3">
