--- a/src/main/resources/templates/user/passwordset.html
+++ b/src/main/resources/templates/user/passwordset.html
@@ -25,8 +25,8 @@
             <p><br>Your new password is set. You can now log in to the following TCBL
                 services or Associated Service Providers:</p>
             <ul>
-                <li><a href="http://tcbl.ditf-mr.de/">TCBL website</a></li>
-                <li><a href="http://labs.tcbl.eu/">TCBL Labs</a></li>
+                <li><a href="http://tcbl.eu/">TCBL website</a></li>
+                <li><a href="https://labs.tcbl.eu/">TCBL Labs</a></li>
             </ul>
         </main>
     </div>
