* go on with snapshot development * Corrected typo

--- a/src/main/resources/templates/user/registered.html
+++ b/src/main/resources/templates/user/registered.html
@@ -20,7 +20,7 @@
     <div th:replace="/fragments :: header( ~{::h2}, ~{::main})">
         <h2>Almost done!</h2>
         <main>
-            <p><br>Your registration is almost completed. An e-mail with a confirmation link will be sent to you
+            <p><br>Your registration is almost complete. An e-mail with a confirmation link will be sent to you
                 shortly.</p>
             <p>If it doesn't arrive within a few minutes, please check your spam folder or <a class="normal" th:href="@{/user/register}">try again</a>.
             </p>
