* Corrected links after registration

--- a/src/main/resources/templates/user/confirmed.html
+++ b/src/main/resources/templates/user/confirmed.html
@@ -23,8 +23,8 @@
             <p><br>You are successfully registered. You can now log in to the following TCBL services or Associated Service
                 Providers:</p>
             <ul>
-                <li><a href="http://tcbl.ditf-mr.de/">TCBL website</a></li>
-                <li><a href="http://labs.tcbl.eu/">TCBL Labs</a></li>
+                <li><a href="http://tcbl.eu/">TCBL website</a></li>
+                <li><a href="https://labs.tcbl.eu/">TCBL Labs</a></li>
             </ul>
         </main>
     </div>
