made post register and post passwordreset consequent

--- a/src/main/resources/templates/user/registered.html
+++ b/src/main/resources/templates/user/registered.html
@@ -22,8 +22,8 @@
         <main>
             <p><br>Your registration is almost complete. An e-mail with a confirmation link will be sent to you
                 shortly.</p>
-            <p>If it doesn't arrive within a few minutes, please check your spam folder or <a class="normal" th:href="@{/user/register}">try again</a>.
-            </p>
+            <p>If it doesn't arrive within a few minutes, please check your spam folder or <a class="normal" th:href="@{/user/register}">try again</a>.</p>
+            <p>You can close this browser tab.</p>
         </main>
     </div>
 </div>
