Added URLs to newly integrated clients.

--- a/src/main/resources/templates/user/confirmed.html
+++ b/src/main/resources/templates/user/confirmed.html
@@ -20,11 +20,16 @@
     <div th:replace="/fragments :: header( ~{::h2}, ~{::main})">
         <h2>Successfully registered!</h2>
         <main>
-            <p><br>You are successfully registered. You can now log in to the following TCBL services or Associated Service
-                Providers:</p>
+            <p><br>You are successfully registered. You can now log in to the following services
+                brought to you by the TCBL consortium:</p>
             <ul>
-                <li><a href="http://tcbl.eu/">TCBL website</a></li>
-                <li><a href="https://labs.tcbl.eu/">TCBL Labs</a></li>
+                <li><a href="https://tcbl.eu/">Main TCBL website</a></li>
+                <li><a href="https://zine.tcbl.eu/">_ZINE, the TCBL magazine</a></li>
+                <li><a href="https://labs.tcbl.eu/">TCBL Labs platform</a></li>
+            </ul>
+            <p>Or use service provided by our Associated Service Providers:</p>
+            <ul>
+                <li><a href="https://thela.cleviria.it/">Thela</a></li>
             </ul>
         </main>
     </div>
