--- a/src/main/resources/templates/user/passwordset.html
+++ b/src/main/resources/templates/user/passwordset.html
@@ -9,9 +9,7 @@
         <h1>Resetting password failed</h1>
         <aside>
             <p>
-                <br>We are sorry to tell you that setting your password failed. Please <a class="normal"
-                                                                                          th:href="@{/user/resetpw}">try
-                again</a>.
+                <br>We are sorry to tell you that setting your password failed. Please <a class="normal" th:href="@{/user/resetpw}">try again</a>.
             </p>
         </aside>
     </div>
@@ -22,11 +20,16 @@
     <div th:replace="/fragments :: header( ~{::h2}, ~{::main})">
         <h2>Password successfully set!</h2>
         <main>
-            <p><br>Your new password is set. You can now log in to the following TCBL
-                services or Associated Service Providers:</p>
+            <p><br>Your new password is set. You can now log in to the following services
+                brought to you by the TCBL consortium:</p>
             <ul>
-                <li><a href="http://tcbl.eu/">TCBL website</a></li>
-                <li><a href="https://labs.tcbl.eu/">TCBL Labs</a></li>
+                <li><a href="https://tcbl.eu/">Main TCBL website</a></li>
+                <li><a href="https://zine.tcbl.eu/">_ZINE, the TCBL magazine</a></li>
+                <li><a href="https://labs.tcbl.eu/">TCBL Labs platform</a></li>
+            </ul>
+            <p>Or use service provided by our Associated Service Providers:</p>
+            <ul>
+                <li><a href="https://thela.cleviria.it/">Thela</a></li>
             </ul>
         </main>
     </div>
