--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="/fragments :: head">
+<head th:replace="/fragments :: standard-head">
 </head>
 <body>
-
-<div th:replace="/fragments :: header( ~{::h1}, ~{::main})">
+<div th:replace="/fragments :: standard-body-div( ~{::h1}, ~{::main})">
 	<h1>Manage your information</h1>
 	<main>
 		<form action="#" th:action="@{/user/update}" th:object="${tcblUser}" method="post">
