--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,48 +1,31 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="/fragments :: head"/>
+<head th:replace="/fragments :: standard-head">
+</head>
 <body>
+<div th:replace="/fragments :: standard-body-div( ~{::h1}, ~{::main})">
+	<h1>TCBL User  Manager</h1>
 
-<!-- render this if the user is logged in -->
-<!--div style="float: right" th:fragment="logout" sec:authorize="isAuthenticated()">
-    <div style="float:left">
-        <span style="font-weight:bold">User: </span><span sec:authentication="name"></span>
-    </div>
-    <div style="float:none">&nbsp;</div>
-    <div style="float:right">
-        <form action="#" th:action="@{/logout}" method="post">
-            <input type="submit" value="Logout" />
-        </form>
-    </div>
+	<main>
+		<div>
+			<p>Welcome to the TCBL User Management application!</p>
+			<p>If you want to change the information you share with TCBL services, sign in below.</p>
+			<p>This is still work in progress, more to come soon!</p>
+		</div>
+		<div>&nbsp;</div>
+
+		<div th:if="${message} != null" id="dialog" th:title="${message.title}">
+		   <p th:text="${message.message}"></p>
+		</div>
+
+		<div sec:authorize="hasRole('ROLE_ANONYMOUS')">
+			<a href="/oiclogin" th:href="@{/oiclogin}">Log in with TCBL</a>
+		</div>
+
+		<div sec:authorize="isAuthenticated()">
+			<a href="/user/index" th:href="@{/user/index}">Manage your info</a>
+		</div>
+	</main>
 </div>
-<!-- *** -->
-
-<h1>TCBL User  Manager</h1>
-<div>
-    <p>Welcome to the TCBL User Management application!</p>
-    <p>If you want to change the information you share with TCBL services, sign in below.</p>
-    <p>This is still work in progress, more to come soon!</p>
-<!--    You are successfully logged in <span style="font-weight:bold" th:text="${userName}"></span>
-    via the OAuth 2.0 Client <span style="font-weight:bold" th:text="${clientName}"></span> -->
-</div>
-<div>&nbsp;</div>
-
-<div th:if="${message} != null" id="dialog" th:title="${message.title}">
-   <p th:text="${message.message}"></p>
-</div>
-
-<div sec:authorize="hasRole('ROLE_ANONYMOUS')">
-    <a href="/oiclogin" th:href="@{/oiclogin}">Log in with TCBL</a>
-</div>
-
-<div sec:authorize="isAuthenticated()">
-    <a href="/user/index" th:href="@{/user/index}">Manage your info</a>
-</div>
-
-<div class="tcbl-footer row" th:fragment="footer">
-    <p>This project has received funding from the European Union's Horizon 2020 Programme for research, technology development, and innovation under grant Agreement n.646133</p>
-    <img th:src="@{/assets/euh2020.png}">
-</div>
-
 </body>
 </html>
