--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="/fragments :: head">
+<head th:replace="/fragments :: standard-head">
+</head>
 <body>
-
-<div th:replace="/fragments :: header( ~{::h1}, ~{::main})">
+<div th:replace="/fragments :: standard-body-div( ~{::h1}, ~{::main})">
 	<h1>Sign up to TCBL</h1>
     <main>
         <form action="#" th:action="@{/user/register}" th:object="${tcblUser}" method="post" name="regForm"
@@ -44,7 +44,6 @@
         </form>
     </main>
 </div>
-
 <script th:replace="/fragments :: validatePassword"></script>
 </body>
 </html>
