--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -26,23 +26,33 @@ the other templates.
 <body>
 
 <!-- This is the standard body/div element. -->
-<div th:fragment="standard-body-div(title, main)" class="row">
+<div th:fragment="standard-body-div(title, main)">
 	<!--/* common header */-->
-	<div class="columns">
-		<img th:src="@{/assets/TCBLAltsm.png}" alt="TCBL logo">
+	<div class="row">
+		<div class="columns">
+			<img th:src="@{/assets/TCBLAltsm.png}" alt="TCBL logo">
+		</div>
+		<div class="columns">
+			<h1 th:replace="${title}">Hello</h1>
+		</div>
 	</div>
-	<div class="columns">
-		<h1 th:replace="${title}">Hello</h1>
-	</div>
-	<div class="colums break">&nbsp;</div>
 
 	<!--/* main page contents here */-->
-	<div class="columns">
-		<th:block th:replace="${main}"/>
+	<div class="row">
+		<div class="columns">
+			<th:block th:replace="${main}"/>
+		</div>
+	</div>
+
+	<!--/* common status */-->
+	<div class="row tcbl-status" th:if="${message} != null">
+		<div class="columns">
+			<p th:text="|${message.title}: ${message.message}|"></p>
+		</div>
 	</div>
 
 	<!--/* common footer */-->
-	<div class="tcbl-footer row">
+	<div class="row tcbl-footer">
 		<div class="columns">
 			<p>This project has received funding from the European Union's Horizon 2020 Programme for research, technology development, and innovation under grant Agreement n.646133</p>
 		</div>
