--- a/src/main/resources/templates/user/resetpw.html
+++ b/src/main/resources/templates/user/resetpw.html
@@ -6,15 +6,16 @@
 <div th:replace="/fragments :: standard-body-div( ~{::h1}, ~{::main})">
 	<h1>Reset Password</h1>
 	<main>
-		<p>First time on the new website? Welcome in!<br>Forgot your password? No problem.</p>
+		<p>Forgot your password? No problem. </p>
+		<p>Enter your email address below to receive a mail that will enable you to reset your password.</p>
 		<form action="#" th:action="@{/user/resetpw}" method="post" name="resetPwForm">
 			<div class="row">
 				<div class="columns large-3">
-					<label for="mail">E-mail</label>
+					<label for="mail">Email</label>
 					<input type="email" name="mail" id="mail" required/>
 				</div>
 			</div>
-			<input type="submit" value="Reset password" class="red-button"/>
+			<input type="submit" value="Send me that mail" class="red-button"/>
 		</form>
 	</main>
 </div>
